--- a/不要/index-mark2.html
+++ b/不要/index-mark2.html
@@ -1642,7 +1642,7 @@
         <p data-aos="fade-up" data-aos-delay="150">ITで人を育て、お客様と志を共にする未来を創る</p>
         <h3 class="mvv-title" data-aos="fade-up" data-aos-delay="200">Vision </h3>
         <p data-aos="fade-up" data-aos-delay="250">「技術力 × 人間力」 = プロフェッショナル<br>社会に貢献できる真のプロフェッショナルを育てられる会社</p>
-        <h3 class="mvv-title" data-aos="fade-up" data-aos-delay="300">Values </h3>
+        <h3 class="mvv-title" data-aos="fade-up" data-aos-delay="300">Value </h3>
         <ul>
             <li data-aos="fade-up" data-aos-delay="350">誠実：行動と言動に責任を持って真面目に向き合うこと</li>
             <li data-aos="fade-up" data-aos-delay="400">素直：他人からの意見を受け入れ、己を見直したり改善すること</li>
