--- a/不要/index-mark3.html
+++ b/不要/index-mark3.html
@@ -728,7 +728,7 @@
                 </div>
                 <div class="card" data-aos="fade-up" data-aos-delay="300">
                     <div class="icon"><i class="fa-solid fa-gem"></i></div>
-                    <h3>Values</h3>
+                    <h3>Value</h3>
                      <ul>
                      <li data-aos="fade-up" data-aos-delay="350">誠実：行動と言動に責任を持って真面目に向き合うこと</li>
                      <li data-aos="fade-up" data-aos-delay="400">素直：他人からの意見を受け入れ、己を見直したり改善すること</li>
